fdo#58819 VML export: handle objects anchored in the header / footer

Previously such shapes landed in the middle of section properties.

Change-Id: I7993eaa721e2b53d8adb1cbdee40992bbeb11416